--- a/Nasu.html
+++ b/Nasu.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,user-scalable=no, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="http://drive.google.com/uc?export=view&id=1mSPgH-A9KYTbkjZZqaBKr98wESTM0MJw">
-    <link rel="stylesheet" href="https://drive.google.com/open?id=1fAq22xpi30xGIIrJ7zHyw2dxxBf-bhvm">
+    <link rel="stylesheet" href="http://drive.google.com/uc?export=view&id=1fAq22xpi30xGIIrJ7zHyw2dxxBf-bhvm">
     <title>Document</title>
 </head>
 <body>
