--- a/Nasu.html
+++ b/Nasu.html
@@ -52,7 +52,7 @@
                         
                             <div class="row">
                                 <div class="col-xs-12">
-                                <p id="nuestros_trabajos">Nuestros Trabajos</p>
+                                <p id="nuestros_trabajos">Nuestros 3 Trabajos</p>
                                 </div>
                             
                                 <!--bigbang-->
