trabajando sobre la lupa

--- a/Nasu.html
+++ b/Nasu.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,user-scalable=no, initial-scale=1.0">
+    <link rel="stylesheet" href="http://drive.google.com/uc?export=view&id=1VRHe5WaW1fMAvnI8_kc657cLtY-whze_">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="flexboxgrid.min.css">
     <link rel="stylesheet" href="Nasu.css">
@@ -38,7 +39,7 @@
                     <a href="#">Nuestro Foro</a>
                     <a href="#">Categorias</a>
                     <a href="#">About Us</a>
-                    <a href="#">Buscar</a>
+                    <i class="fas fa-search"></i>
                 </div> 
                 <div class="col-xs-12">
                     <p id="h2">La Innovacion es nuestro objetivo.</p>
